--- a/non-interactive/Bonsai-Pricing-Page/styles.css
+++ b/non-interactive/Bonsai-Pricing-Page/styles.css
@@ -11,21 +11,61 @@
     list-style-type: none;
 }
 
+span, p, li, h1, h2, h3, h4, form {
+    color:var(--color2);
+}
+
+button {
+    background-color: var(--color1);
+    border:1px solid var(--color1);
+    border-radius: 3px;
+    width:5vw;
+    height:5vh;
+    font-weight: bold;
+    color:var(--color3);
+
+    &:hover {
+        transform: scale(1.1);
+        cursor: pointer;
+    }
+}
+
+.login {
+    background-color: #fff;
+    color:var(--color1);
+    margin-right:-5vw;
+}
+
+.small {
+    width:calc(5vw + 3vw);
+}
+
 body {
     margin:0;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
+    background-color: var(--color3);
 }
 
 h1, h2, h3, h4 {
     margin:0;
 }
 
+.green {
+    color:var(--color1);
+}
+
+
+li:hover {
+    opacity:0.7;
+    cursor: pointer;
+}
 /*header*/
 header {
     width: 100%;
+    opacity: 0.97;
 }
 
 nav {
@@ -39,6 +79,10 @@ nav {
     background-color: #fff;
     margin-bottom: 1px;
 
+    &:hover {
+        box-shadow: 0 0 3px 3px rgba(0, 0, 0, 0.058);
+    }
+
     p {
         color:var(--color1);
         font-size: 2rem;
@@ -46,9 +90,12 @@ nav {
     }
 
     .headerList {
+        width: 35%;
+        margin-left: 20vw;
         display: flex;
         justify-content: space-between;
         align-items: center;
+
     }
 }
 
@@ -70,8 +117,9 @@ main>* {
 }
 
 
-/* first section */
+    /* first section */
 .toggle {
+    margin-top: 5vh;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -83,6 +131,27 @@ main>* {
         align-items: center;
         width: 20%;
      }
+}
+
+.toggleButton {
+    width:3vw;
+    height:3vh;
+    display: flex;
+    align-items: center;
+    border-radius: 5vw;
+
+
+    span {
+        background-color: #fff;
+        width: 1.2vw;
+        height: 1.2vw;
+        border-radius: 50%;
+        transition: 0.1s ease-in-out;
+
+        &:active {
+            transform: translate(80%);
+        }
+    }
 }
 
 .options {
@@ -97,8 +166,13 @@ main>* {
         justify-content:center;
         height:100%;
         width:48%;
-        border: 1px solid var(--color2);
+        border: 1px solid rgba(0, 0, 0, 0.126);
         border-radius: 3px;
+
+        &:hover {
+            transform: scale(1.01);
+            cursor: pointer;
+        }
 
         > div {
             width:80%;
@@ -106,11 +180,65 @@ main>* {
             display: flex;
             flex-direction: column;
             justify-content: space-between;
+            align-items: center;
+
+            .free {
+                width: 100%;
+            }
         }
     }
 }
 
-/*  second section */
+.workflow {
+    width: 100%;
+    height: 25%;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    font-size: 2rem;
+
+    .wf {
+        font-size: 1.5rem;
+    }
+}
+
+.price {
+    font-weight: bold;
+}
+
+.new {
+    background-color: var(--color4);
+    border:none;
+    width:2rem;
+    height: 1rem;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 6px;
+}
+
+.line {
+    width: 100%;
+    border: 0.5px solid var(--color1);
+    box-shadow: 0 0 1px 0.5px var(--color1);
+}
+
+.feat {
+    height: 50%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content:space-evenly;
+
+    span::before {
+        content: "✔ ";
+        color: var(--color1);
+    }
+}
+
+
+    /*  second section */
 
 .allAddons {
     display: flex;
@@ -120,12 +248,17 @@ main>* {
     height:40vh;
 
     > div {
-        border: 1px solid black;
+        box-shadow: 0 0 3px 3px rgb(247, 247, 247);
         width: 100%;
         height:30%;
         display: flex;
         align-items: center;
         justify-content: space-between;
+
+        &:hover {
+            transform: scale(1.01);
+            cursor: pointer;
+        }
 
         .addonsText {
             margin-left:1rem;
@@ -138,7 +271,7 @@ main>* {
 }
 
 
-/* third section */
+    /* third section */
 
 .blue {
     background-color: rgb(225, 243, 255);
@@ -147,6 +280,10 @@ main>* {
     justify-content: space-around;
     align-items: center;
     height:33vh;
+
+    > div > p {
+        font-size: 2.5rem;
+    }
 }
 
 mark {
@@ -154,8 +291,12 @@ mark {
     color:var(--color1);
 }
 
+.big {
+    width:15%;
+}
 
-/* fourth section */
+
+    /* fourth section */
 
 .questions {
     display: flex;
@@ -166,20 +307,47 @@ mark {
         width:80%;
         display: flex;
         flex-direction: column;
-        justify-content: space-between;
-        align-items: flex-end;
+        justify-content:space-evenly;
+        align-items: center;
 
-        > div{
-            width:100%;
+        form {
+            width: 100%;
             display: flex;
+            flex-wrap: wrap;
             justify-content: space-between;
             align-items: center;
+            font-size: 1.3rem;
 
-        &:hover {background-color: rgb(226, 226, 226);}
+            &:hover {
+                background-color: rgb(231, 230, 230);
+            }
         }
     }
 }
 
+input[type="checkbox"], form p {
+    display: none;
+}
+
+input[type="checkbox"]:checked {
+        ~p {
+            display: block;
+            background-color: #fff;
+            width: 100%;
+            margin-bottom: 0;
+            margin-top: 0;
+            border: 1px solid #00b2886e;
+            border-radius: 0.1vw;
+        }
+}
+
+
+
+h4 {
+    color:var(--color1);
+    font-weight: lighter;
+    font-size: 1.7rem;
+}
 
 /* footer */
 
@@ -188,8 +356,30 @@ footer {
     width:80%;
     display: flex;
     justify-content: space-between ;
+
+    ul li:first-child {
+        font-weight: bold;
+        margin-bottom: 4vh;
+
+        &:hover {
+            opacity: 1;
+            cursor: inherit;
+        }
+    }
+
+    ul li {
+        margin-top:0.7vh;
+        font-weight: lighter;
+    }
 }
 
+.templates {
+    font-weight: bold;
+    &:hover {
+        opacity: 1;
+        cursor: inherit;
+    }
+}
 
 footer, .questions, .blue, .allAddons {
     margin-top:5vh;
@@ -197,4 +387,8 @@ footer, .questions, .blue, .allAddons {
 
 h1, h2, h4 {
     margin-bottom: 3vh;
+}
+
+.top {
+    margin-top: 3vh;
 }
