--- a/non-interactive/Monogram/styles.css
+++ b/non-interactive/Monogram/styles.css
@@ -13,7 +13,6 @@ body {
 }
 
 main>section {
-    height: 100vh;
     width: 100%;
 }
 
@@ -44,7 +43,8 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    
+    z-index: 5;
+
     nav {
         width: 60%;
         height: 100%;
@@ -101,3 +101,57 @@ select {
         outline:none;
     }
 }
+
+/* main */
+    /* general main styles */
+h1, h2 {
+    color:var(--bannerFontColor);
+}
+
+#secondSection, .thirdSection, .fourthSection {
+    color:var(--bannerAndFontColor);
+}
+
+    /* section 1 */
+.firstSection {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    h1 {
+        text-align: center;
+        font-size: 2.5rem;
+        margin-bottom: -1rem;
+    }
+
+    h2 {
+        text-align: center;
+        font-size: 1.5rem;
+        font-weight: lighter;
+    }
+
+    .bg {
+        z-index: -1;
+        position: absolute;
+        width: 100%;
+        height: 100vh;
+    }
+}
+
+.arrow {
+    width: 7vw;
+    position: absolute;
+    bottom: 3vh;
+    left: 46.5vw;
+
+    &:hover {
+        opacity: 0.7;
+    }
+
+}
+
+
+    /* section 2 */
+
