--- a/non-interactive/Monogram/styles.css
+++ b/non-interactive/Monogram/styles.css
@@ -12,7 +12,7 @@ body {
     flex-direction: column;
 }
 
-.firstSection, .thirdSection {
+.firstSection, .thirdSection, footer {
     width: 100%;
 }
 
@@ -158,7 +158,7 @@ h1, h2 {
 .secondSection {
     height: 100vh;
     display: grid;
-    grid-template-rows: 10vh 1fr 1fr 10vh;
+    grid-template-rows: 10vh 30vh 30vh 10vh;
     grid-template-columns:5vh 1fr 1fr 5vh;
     gap:5%;
     grid-template-areas: 
@@ -258,9 +258,68 @@ h5 {
 /* section 4 */
 
 .fourthSection {
+    margin-bottom: 53vh;
     display: grid;
     grid-template-columns: 5vh 1fr 1fr 5vh;
-    grid-template-rows: 10vh 1fr 1fr 1fr 1fr 10vh ;
-    grid-template-areas: ;
+    grid-template-rows: 10vh 30vh 30vh 30vh 30vh 30vh;
+    gap:5%;
+    grid-template-areas: 
+    ". . . ."
+    ". e f ."
+    ". g h ."
+    ". i j ."
+    ". k l ."
+    ". m n ."
+    ;
 }
 
+.e {
+    grid-area: e;
+}
+
+.f {
+    grid-area: f;
+}
+
+.g {
+    grid-area: g;
+}
+
+.h {
+    grid-area: h;
+}
+
+.i {
+    grid-area: i;
+}
+
+.j {
+    grid-area: j;
+}
+
+.k {
+    grid-area: k;
+}
+
+.l {
+    grid-area: l;
+}
+
+.m {
+    grid-area: m;
+}
+
+.n {
+    grid-area: n;
+}
+
+
+/* footer */
+
+footer {
+    height:33vh;
+
+    ul li:first-child {
+        font-weight: bold;
+    }
+}
